# cmake-copy-file-example

./: CMakeLists.txt  README.md
